2004-08-21  Christian Stimming  <stimming@tuhh.de>

	* src/os/gwentime.h: Add conversion functions GWEN_Time_To_tm and
	GWEN_Time_To_time_t.

2004/08/20: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- introduced logdomains: Now every library can have its own log domain,
  making it much easier to debug a single library out of multiple libs
  NOTE: This is an incompatible API change, therefore SO_VERSION++.
  The first argument of all GWEN_Logger functions has been changed.
  However, in most cases a NULL was given, so you should simply need to
  recompile your sources with no (or at most few) changes.
- prepared gwen for gettext
- added simplified error codes to GWEN_Error, will get away from that
  complicated GWEN_ERRORCODE stuff, since that isn't needed anyway.
- added GWEN_Logger_IsOpen()


2004-08-18   Christian Stimming <stimming@tuhh.de>

	* src/base/misc.h, list2.h, inherit.h: Add extra macro for an
	empty string because in the definition of GWEN_LIST_FUNCTION_DEFS,
	the MSVC compiler does not accept an empty macro argument.


2004/08/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- very much simplified GWEN_TIME: It now mostly uses <time.h> functions
  and a local version of mktime (to make the time from UTC time instead
  of local time). This leaves only one function which the OS layer has to 
  provide.
- decreased debugging level in GWEN_DB_ReadFromStream


2004/08/16: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added GWEN_Time_fromUtcString()


2004-08-16   Christian Stimming <stimming@tuhh.de>

	* src/os/windows/gwentime.c (GWEN_Time_new): Remove errornous
	extra variable declaration.


2004/08/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions to get the time/date as UTC time
- added functions to set/get a GWEN_TIME from/to a GWEN_DB